tests/spec/pass/if_basic.aja
a = 5
if a > 3:
    print("big")
else:
    print("small")
