tests/spec/fail/equality_mismatch.aja
if 1 == "1":
    print("x")
